# doubleGraph

./: NOTICE  README.md  build.sh  dependencies.yaml  pyproject.toml
cpp/: CMakeLists.txt
cpp/include/cugraph/: algorithms.hpp
cpp/include/cugraph/aai/: algorithms.hpp  cache_pool.hpp  compact_graph.hpp  target_gpu.hpp  types.hpp
cpp/include/cugraph/aai/api/: centrality.hpp  community.hpp  components.hpp  cores.hpp  link_analysis.hpp  link_prediction.hpp  traversal.hpp  tree.hpp
cpp/libcugraph_etl/: CMakeLists.txt
cpp/src/aai/impl/a100/centrality/: betweenness_centrality.cu  betweenness_centrality_mask.cu  betweenness_centrality_seg.cu  betweenness_centrality_seg_mask.cu  edge_betweenness_centrality.cu  edge_betweenness_centrality_mask.cu  edge_betweenness_centrality_seg.cu  edge_betweenness_centrality_seg_mask.cu  eigenvector_centrality.cu  eigenvector_centrality_f32.cu  eigenvector_centrality_f32_mask.cu  eigenvector_centrality_f32_seg.cu  eigenvector_centrality_f32_seg.cu.flags  eigenvector_centrality_f32_seg_mask.cu  eigenvector_centrality_f64.cu  eigenvector_centrality_f64_mask.cu  eigenvector_centrality_f64_seg.cu  eigenvector_centrality_f64_seg_mask.cu  eigenvector_centrality_mask.cu  eigenvector_centrality_seg.cu  eigenvector_centrality_seg_mask.cu  katz_centrality.cu  katz_centrality_f32.cu  katz_centrality_f32_mask.cu  katz_centrality_f32_seg.cu  katz_centrality_f32_seg_mask.cu  katz_centrality_f64.cu  katz_centrality_f64_mask.cu  katz_centrality_f64_seg.cu  katz_centrality_f64_seg_mask.cu  katz_centrality_mask.cu  katz_centrality_seg.cu  katz_centrality_seg_mask.cu
cpp/src/aai/impl/a100/community/: analyze_clustering_edge_cut_f32.cu  analyze_clustering_edge_cut_f32_seg.cu  analyze_clustering_edge_cut_f64.cu  analyze_clustering_edge_cut_f64_seg.cu  analyze_clustering_modularity_f32.cu  analyze_clustering_modularity_f32_seg.cu  analyze_clustering_modularity_f64.cu  analyze_clustering_modularity_f64_seg.cu  analyze_clustering_ratio_cut_f32.cu  analyze_clustering_ratio_cut_f32.cu.flags  analyze_clustering_ratio_cut_f32_seg.cu  analyze_clustering_ratio_cut_f64.cu  analyze_clustering_ratio_cut_f64_seg.cu  ecg_f32.cu  ecg_f32_seg.cu  ecg_f32_seg.cu.flags  ecg_f64.cu  ecg_f64_seg.cu  extract_ego.cu  extract_ego_seg.cu  extract_ego_weighted_f32.cu  extract_ego_weighted_f32_seg.cu  extract_ego_weighted_f32_seg.cu.flags  extract_ego_weighted_f64.cu  extract_ego_weighted_f64_seg.cu  k_truss.cu  k_truss_mask.cu  k_truss_seg.cu  k_truss_seg_mask.cu  leiden_f32.cu  leiden_f32.cu.flags  leiden_f32_seg.cu  leiden_f64.cu  leiden_f64_seg.cu  louvain_f32.cu  louvain_f32_seg.cu  louvain_f64.cu  louvain_f64_seg.cu  spectral_modularity_maximization_f32.cu  spectral_modularity_maximization_f32_seg.cu  (+6 more)
cpp/src/aai/impl/a100/components/: strongly_connected_components.cu  strongly_connected_components_seg.cu  weakly_connected_components.cu  weakly_connected_components_mask.cu  weakly_connected_components_seg.cu  weakly_connected_components_seg_mask.cu
cpp/src/aai/impl/a100/cores/: core_number.cu  core_number_mask.cu  core_number_seg.cu  core_number_seg.cu.flags  core_number_seg_mask.cu  k_core.cu  k_core_mask.cu  k_core_seg.cu  k_core_seg_mask.cu
cpp/src/aai/impl/a100/link_analysis/: hits.cu  hits_f64.cu  hits_f64_mask.cu  hits_f64_seg.cu  hits_f64_seg_mask.cu  hits_mask.cu  hits_seg.cu  hits_seg_mask.cu  pagerank.cu  pagerank_f32.cu  pagerank_f32_mask.cu  pagerank_f32_p32.cu  pagerank_f32_p32_mask.cu  pagerank_f32_p32_seg.cu  pagerank_f32_p32_seg_mask.cu  pagerank_f32_seg.cu  pagerank_f32_seg_mask.cu  pagerank_f64.cu  pagerank_f64_mask.cu  pagerank_f64_p64.cu  pagerank_f64_p64_mask.cu  pagerank_f64_p64_seg.cu  pagerank_f64_p64_seg_mask.cu  pagerank_f64_seg.cu  pagerank_f64_seg_mask.cu  pagerank_mask.cu  pagerank_p32.cu  pagerank_p32_mask.cu  pagerank_p32_seg.cu  pagerank_p32_seg_mask.cu  pagerank_seg.cu  pagerank_seg_mask.cu
cpp/src/aai/impl/a100/link_prediction/: cosine.cu  cosine_all_pairs.cu  cosine_all_pairs_f32.cu  cosine_all_pairs_f32_seg.cu  cosine_all_pairs_f64.cu  cosine_all_pairs_f64_seg.cu  cosine_all_pairs_seg.cu  cosine_f32.cu  cosine_f32_seg.cu  cosine_f64.cu  cosine_f64_seg.cu  cosine_seg.cu  jaccard.cu  jaccard_all_pairs.cu  jaccard_all_pairs_f32.cu  jaccard_all_pairs_f32_seg.cu  jaccard_all_pairs_f64.cu  jaccard_all_pairs_f64_seg.cu  jaccard_all_pairs_f64_seg.cu.flags  jaccard_all_pairs_seg.cu  jaccard_f32.cu  jaccard_f32_seg.cu  jaccard_f64.cu  (+27 more)
cpp/src/aai/integration/centrality/: betweenness_centrality.cu  eigenvector_centrality.cu  katz_centrality.cu
cpp/src/aai/integration/community/: ecg.cu  egonet.cu  k_truss.cu  leiden.cu  louvain.cu  spectral.cu  triangle_count.cu
cpp/src/aai/integration/components/: scc_legacy.cu  wcc.cu
cpp/src/aai/integration/cores/: core_number.cu  k_core.cu
cpp/src/aai/integration/link_analysis/: hits.cu  pagerank.cu
cpp/src/aai/integration/link_prediction/: cosine.cu  jaccard.cu  overlap.cu  sorensen.cu
cpp/src/aai/integration/traversal/: bfs.cu  k_hop_nbrs.cu  sssp.cu
cpp/src/aai/integration/tree/: mst.cu
cpp/src/c_api/: betweenness_centrality.cpp  bfs.cpp  core_number.cpp  decompress_to_edgelist.cpp  degrees.cu  ecg.cpp  eigenvector_centrality.cpp  extract_ego.cpp  extract_paths.cpp  graph.hpp  graph_functions.cpp  graph_helper.hpp  graph_mg.cpp  graph_sg.cpp  hits.cpp  induced_subgraph.cpp  k_core.cpp  k_truss.cpp  katz.cpp  legacy_mst.cpp  legacy_spectral.cpp  leiden.cpp  lookup_src_dst.cpp  louvain.cpp  negative_sampling.cpp  neighbor_sampling.cpp  pagerank.cpp  random_walks.cpp  similarity.cpp  sssp.cpp  strongly_connected_components.cpp  temporal_neighbor_sampling.cpp  triangle_count.cpp  weakly_connected_components.cpp
cpp/src/centrality/: edge_betweenness_centrality_sg_v32_e32.cu
cpp/src/sampling/: negative_sampling_impl.cuh
cpp/tests/: CMakeLists.txt
cpp/tests/c_api/: bfs_test.c  extract_paths_test.c  legacy_mst_test.c  louvain_test.c  mg_bfs_test.c  similarity_test.c
cpp/tests/centrality/: betweenness_centrality_test.cpp  eigenvector_centrality_test.cpp
cpp/tests/community/: louvain_test.cpp
(+477 files in other folders)
