# SPDX-FileCopyrightText: Copyright (c) 2025, NVIDIA CORPORATION. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
# Modifications Copyright (c) 2025, AA-I Technologies Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# NOTICE: This file has been modified by AA-I Technologies Ltd. from the original.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wheel_building*", "run_benchmarks*"]

[project]
name = "cugraph-private"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
cugraph-build-wheel = "wheel_building.build_wheel:main"
cugraph-run-wheel-benchmarks = "run_benchmarks.run_wheel_benchmarks:_run"

[tool.ruff]
line-length = 88
exclude = [
    "__init__.py",
]

[tool.ruff.lint]
ignore = [
    "E203",
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "F401",
    "F841",
]
